[project]
name = "agent-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langserve>=0.3.3",
    "pydantic>=2.12.5",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.42.0",
]
